Parser optimizations, bug fixes, and speed test.

--- a/parsers/drain3/drain3.ini
+++ b/parsers/drain3/drain3.ini
@@ -25,6 +25,6 @@ max_children = 100
 max_clusters = 1024
 extra_delimiters = ["_"]
 
-[PROFILING]
-enabled = True
-report_sec = 30
+#[PROFILING]
+#enabled = True
+#report_sec = 1200
