--- a/environment_no_dl.yml
+++ b/environment_no_dl.yml
@@ -20,7 +20,7 @@ dependencies:
   - brotli-bin=1.0.9=h5eee18b_7
   - bzip2=1.0.8=h7b6447c_0
   - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2023.08.22=h06a4308_0
+  - ca-certificates=2023.12.12=h06a4308_0
   - comm=0.1.2=py311h06a4308_0
   - contourpy=1.0.5=py311hdb19cb5_0
   - cycler=0.11.0=pyhd3eb1b0_0
@@ -104,7 +104,7 @@ dependencies:
   - numpy=1.26.0=py311h08b1b3b_0
   - numpy-base=1.26.0=py311hf175353_0
   - openjpeg=2.4.0=h3ad879b_0
-  - openssl=3.0.12=h7f8727e_0
+  - openssl=3.0.13=h7f8727e_0
   - orc=1.7.4=hb3bc3d3_1
   - packaging=23.1=py311h06a4308_0
   - pandas=2.1.1=py311ha02d727_0
@@ -130,6 +130,7 @@ dependencies:
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - pytz=2023.3.post1=py311h06a4308_0
+  - pyyaml=6.0.1=py311h5eee18b_0
   - pyzmq=25.1.0=py311h6a678d5_0
   - qt-main=5.15.2=h53bd1ea_10
   - re2=2022.04.01=h295c915_0
@@ -154,6 +155,7 @@ dependencies:
   - wheel=0.41.2=py311h06a4308_0
   - xgboost=1.7.3=py311h06a4308_0
   - xz=5.4.2=h5eee18b_0
+  - yaml=0.2.5=h7b6447c_0
   - zeromq=4.3.4=h2531618_0
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
@@ -162,4 +164,5 @@ dependencies:
       - drain3==0.9.11
       - jsonpickle==1.5.1
       - polars==0.19.19
-      - tipping==0.1.2
+      - tipping==0.1.3
+
