--- a/environment_win64_no_dl.yml
+++ b/environment_win64_no_dl.yml
@@ -1,4 +1,4 @@
-name: ll_win64_no_tf
+name: environment_win64_no_dl
 channels:
   - conda-forge
   - defaults
@@ -6,28 +6,38 @@ dependencies:
   - _libgcc_mutex=0.1=main
   - _py-xgboost-mutex=2.0=cpu_0
   - abseil-cpp=20211102.0=hd77b12b_0
-  - arrow-cpp=11.0.0=ha81ea56_2
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - aws-c-common=0.6.8=h2bbff1b_1
-  - aws-c-event-stream=0.1.6=hd77b12b_6
-  - aws-checksums=0.1.11=h2bbff1b_2
-  - aws-sdk-cpp=1.8.185=hd77b12b_1
+  - arrow-cpp=14.0.2=ha81ea56_1
+  - asttokens=2.0.5=pyhd8ed1ab_0
+  - aws-c-auth=0.6.19=h2bbff1b_0
+  - aws-c-cal=0.5.20=h2bbff1b_0
+  - aws-c-common=0.8.5=h2bbff1b_0
+  - aws-c-compression=0.2.16=h2bbff1b_0
+  - aws-c-event-stream=0.2.15=hd77b12b_0
+  - aws-c-http=0.6.25=h2bbff1b_0
+  - aws-c-io=0.13.10=h2bbff1b_0
+  - aws-c-mqtt=0.7.13=h2bbff1b_0
+  - aws-c-s3=0.1.51=h2bbff1b_0
+  - aws-c-sdkutils=0.1.6=h2bbff1b_0
+  - aws-checksums=0.1.13=h2bbff1b_0
+  - aws-crt-cpp=0.18.16=hd77b12b_0
+  - aws-sdk-cpp=1.10.55=hd77b12b_0
   - backcall=0.2.0=pyhd3eb1b0_0
   - blas=1.0=mkl
   - boost-cpp=1.82.0=h59b6b97_2
-  - bottleneck=1.3.5=py311h5bb9823_0
+  - bottleneck=1.3.7=py311hd7041d2_0
   - brotli=1.0.9=h2bbff1b_7
   - brotli-bin=1.0.9=h2bbff1b_7
   - bzip2=1.0.8=he774522_0
   - c-ares=1.19.1=h2bbff1b_0
-  - ca-certificates=2023.08.22=haa95532_0
+  - ca-certificates=2024.3.11=haa95532_0
   - colorama=0.4.6=py311haa95532_0
-  - comm=0.1.2=py311haa95532_0
-  - contourpy=1.0.5=py311h59b6b97_0
+  - comm=0.2.1=pyhd8ed1ab_0
+  - contourpy=1.2.0=py311h59b6b97_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - cyrus-sasl=2.1.28=h563c26c_1
   - debugpy=1.6.7=py311hd77b12b_0
   - decorator=5.1.1=pyhd3eb1b0_0
+  - exceptiongroup=1.2.0=pyhd8ed1ab_2
   - executing=0.8.3=pyhd3eb1b0_0
   - expat=2.5.0=hd77b12b_0
   - fontconfig=2.14.1=h9c4af85_2
@@ -35,14 +45,15 @@ dependencies:
   - freetype=2.12.1=ha860e81_0
   - gflags=2.2.2=ha925a31_0
   - giflib=5.2.1=h8cc25b3_3
-  - glib=2.69.1=h5dc1a3c_2
+  - glib=2.78.4=hd77b12b_0
+  - glib-tools=2.78.4=hd77b12b_0
   - glog=0.5.0=hd77b12b_0
   - grpc-cpp=1.48.2=hfe90ff0_1
   - icc_rt=2022.1.0=h6049295_2
   - icu=73.1=h6c2663c_0
   - intel-openmp=2023.1.0=h59b6b97_46320
-  - ipykernel=6.25.0=py311h746a85d_0
-  - ipython=8.15.0=py311haa95532_0
+  - ipykernel=6.28.0=pyha63f2e9_0
+  - ipython=8.20.0=pyh7428d3b_0
   - jedi=0.18.1=py311haa95532_1
   - joblib=1.2.0=py311haa95532_0
   - jpeg=9e=h2bbff1b_1
@@ -58,11 +69,12 @@ dependencies:
   - libbrotlienc=1.0.9=h2bbff1b_7
   - libclang=14.0.6=default_hb5a9fac_1
   - libclang13=14.0.6=default_h8e68704_1
-  - libcurl=8.1.1=h86230a5_0
+  - libcurl=8.5.0=h86230a5_0
   - libdb=6.2.32=h6c2663c_1
   - libdeflate=1.17=h2bbff1b_1
   - libevent=2.1.12=h56d1f94_1
   - libffi=3.4.4=hd77b12b_0
+  - libglib=2.78.4=ha17d25a_0
   - libiconv=1.16=h2bbff1b_2
   - libllvm14=14.0.6=h4157e71_3
   - libpng=1.6.39=h8cc25b3_0
@@ -92,30 +104,30 @@ dependencies:
   - mkl_random=1.2.4=py311h59b6b97_0
   - msys2-conda-epoch=20160418=1
   - munkres=1.1.4=py_0
-  - nest-asyncio=1.5.6=py311haa95532_0
+  - nest-asyncio=1.6.0=pyhd8ed1ab_0
   - numexpr=2.8.7=py311h1fcbade_0
   - numpy=1.26.0=py311hdab7c0b_0
   - numpy-base=1.26.0=py311hd01c5d8_0
   - openjpeg=2.4.0=h4fc8c34_0
-  - openssl=3.0.12=h2bbff1b_0
+  - openssl=3.0.13=h2bbff1b_0
   - orc=1.7.4=h623e30f_1
   - packaging=23.1=py311haa95532_0
-  - pandas=2.1.1=py311hf62ec03_0
+  - pandas=2.2.1=py311hea22821_0
   - parso=0.8.3=pyhd3eb1b0_0
-  - pcre=8.45=hd77b12b_0
+  - pcre2=10.42=h0ff8eda_0
   - pexpect=4.8.0=pyhd3eb1b0_3
   - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=10.0.1=py311h045eedc_0
-  - pip=23.3=py311haa95532_0
+  - pillow=10.2.0=py311h2bbff1b_0
+  - pip=23.3.1=pyhd8ed1ab_0
   - platformdirs=3.10.0=py311haa95532_0
   - ply=3.11=py311haa95532_0
-  - prompt-toolkit=3.0.36=py311haa95532_0
+  - prompt-toolkit=3.0.43=py311haa95532_0
   - psutil=5.9.0=py311h2bbff1b_0
   - pthread-stubs=0.3=h3c9f919_1
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
   - py-xgboost=1.7.3=py311haa95532_0
-  - pyarrow=11.0.0=py311h8a3a540_1
+  - pyarrow=14.0.2=py311h847bd2a_0
   - pygments=2.15.1=py311haa95532_1
   - pyparsing=3.0.9=py311haa95532_0
   - pyqt=5.15.10=py311hd77b12b_0
@@ -125,16 +137,16 @@ dependencies:
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - pytz=2023.3.post1=py311haa95532_0
   - pywin32=305=py311h2bbff1b_0
-  - pyzmq=25.1.0=py311hd77b12b_0
+  - pyzmq=25.1.2=py311hd77b12b_0
   - qt-main=5.15.2=h19c9488_10
   - re2=2022.04.01=hd77b12b_0
   - regex=2023.10.3=py311h2bbff1b_0
   - scikit-learn=1.2.2=py311hd77b12b_1
-  - scipy=1.11.3=py311hc1ccb85_0
-  - setuptools=68.0.0=py311haa95532_0
+  - scipy=1.12.0=py311h9f229c6_0
+  - setuptools=68.2.2=pyhd8ed1ab_0
   - sip=6.7.12=py311hd77b12b_0
   - six=1.16.0=pyhd3eb1b0_1
-  - snappy=1.1.9=h6c2663c_0
+  - snappy=1.1.10=h6c2663c_1
   - sqlite=3.41.2=h2bbff1b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
   - tbb=2021.8.0=h59b6b97_0
@@ -142,7 +154,8 @@ dependencies:
   - tk=8.6.12=h2bbff1b_0
   - tornado=6.3.3=py311h2bbff1b_0
   - traitlets=5.7.1=py311haa95532_0
-  - tzdata=2023c=h04d1e81_0
+  - typing_extensions=4.11.0=pyha770c72_0
+  - tzdata=2024a=h0c530f3_0
   - utf8proc=2.6.1=h2bbff1b_0
   - vc=14.2=h21ff451_1
   - vs2015_runtime=14.27.29016=h5e58377_2
@@ -152,14 +165,14 @@ dependencies:
   - xorg-libxau=1.0.11=hcd874cb_0
   - xorg-libxdmcp=1.1.3=hcd874cb_0
   - xz=5.4.2=h8cc25b3_0
-  - zeromq=4.3.4=hd77b12b_0
+  - zeromq=4.3.5=hd77b12b_0
   - zlib=1.2.13=h8cc25b3_0
   - zstd=1.5.5=hd43e919_0
   - pip:
-      - cachetools==5.3.2
-      - drain3==0.9.0
+      - cachetools==4.2.1
+      - drain3==0.9.11
       - importlib-metadata==6.8.0
-      - jsonpickle==1.4.1
-      - polars==0.19.13
+      - jsonpickle==1.5.1
+      - polars==0.20.20
+      - tipping==0.1.3
       - zipp==3.17.0
-prefix: C:\Users\jesse\anaconda3\envs\ll_no_tf
