--- a/environment_no_dl.yml
+++ b/environment_no_dl.yml
@@ -8,6 +8,7 @@ dependencies:
   - abseil-cpp=20211102.0=hd4dd3e8_0
   - arrow-cpp=14.0.2=h374c478_1
   - asttokens=2.0.5=pyhd3eb1b0_0
+  - attrs=23.1.0=py311h06a4308_0
   - aws-c-auth=0.6.19=h5eee18b_0
   - aws-c-cal=0.5.20=hdbd6064_0
   - aws-c-common=0.8.5=h5eee18b_0
@@ -30,6 +31,7 @@ dependencies:
   - bzip2=1.0.8=h5eee18b_5
   - c-ares=1.19.1=h5eee18b_0
   - ca-certificates=2024.3.11=h06a4308_0
+  - cloudpickle=2.2.1=py311h06a4308_0
   - comm=0.2.1=py311h06a4308_0
   - contourpy=1.2.0=py311hdb19cb5_0
   - cycler=0.11.0=pyhd3eb1b0_0
@@ -57,6 +59,8 @@ dependencies:
   - jedi=0.18.1=py311h06a4308_1
   - joblib=1.2.0=py311h06a4308_0
   - jpeg=9e=h5eee18b_1
+  - jsonschema=4.19.2=py311h06a4308_0
+  - jsonschema-specifications=2023.7.1=py311h06a4308_0
   - jupyter_client=8.6.0=py311h06a4308_0
   - jupyter_core=5.5.0=py311h06a4308_0
   - kiwisolver=1.4.4=py311h6a678d5_0
@@ -100,6 +104,7 @@ dependencies:
   - libxgboost=1.7.6=h6a678d5_0
   - libxkbcommon=1.0.1=h5eee18b_1
   - libxml2=2.10.4=hf1b16e4_1
+  - llvmlite=0.42.0=py311h6a678d5_0
   - lz4-c=1.9.4=h6a678d5_0
   - matplotlib=3.8.0=py311h06a4308_0
   - matplotlib-base=3.8.0=py311ha02d727_0
@@ -110,8 +115,10 @@ dependencies:
   - mkl_random=1.2.4=py311hdb19cb5_0
   - munkres=1.1.4=py_0
   - mysql=5.7.24=h721c034_2
+  - nbformat=5.9.2=py311h06a4308_0
   - ncurses=6.4=h6a678d5_0
   - nest-asyncio=1.6.0=py311h06a4308_0
+  - numba=0.59.1=py311ha02d727_0
   - numexpr=2.8.7=py311h65dcdc2_0
   - numpy=1.26.4=py311h08b1b3b_0
   - numpy-base=1.26.4=py311hf175353_0
@@ -128,6 +135,7 @@ dependencies:
   - pillow=10.2.0=py311h5eee18b_0
   - pip=23.3.1=py311h06a4308_0
   - platformdirs=3.10.0=py311h06a4308_0
+  - plotly=5.19.0=py311h92b7b1e_0
   - ply=3.11=py311h06a4308_0
   - prompt-toolkit=3.0.43=py311h06a4308_0
   - prompt_toolkit=3.0.43=hd3eb1b0_0
@@ -142,6 +150,7 @@ dependencies:
   - pyqt5-sip=12.13.0=py311h5eee18b_0
   - python=3.11.5=h955ad1f_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.16.2=py311h06a4308_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - pytz=2023.3.post1=py311h06a4308_0
   - pyyaml=6.0.1=py311h5eee18b_0
@@ -149,20 +158,26 @@ dependencies:
   - qt-main=5.15.2=h53bd1ea_10
   - re2=2022.04.01=h295c915_0
   - readline=8.2=h5eee18b_0
+  - referencing=0.30.2=py311h06a4308_0
   - regex=2023.10.3=py311h5eee18b_0
+  - rpds-py=0.10.6=py311hb02cf49_0
   - s2n=1.3.27=hdbd6064_0
   - scikit-learn=1.2.2=py311h6a678d5_1
   - scipy=1.12.0=py311h08b1b3b_0
   - setuptools=68.2.2=py311h06a4308_0
+  - shap=0.42.1=py311ha02d727_0
   - sip=6.7.12=py311h6a678d5_0
   - six=1.16.0=pyhd3eb1b0_1
+  - slicer=0.0.7=pyhd3eb1b0_0
   - snappy=1.1.10=h6a678d5_1
   - sqlite=3.41.2=h5eee18b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
   - tbb=2021.8.0=hdb19cb5_0
+  - tenacity=8.2.2=py311h06a4308_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.12=h1ccaba5_0
   - tornado=6.3.3=py311h5eee18b_0
+  - tqdm=4.65.0=py311h92b7b1e_0
   - traitlets=5.7.1=py311h06a4308_0
   - tzdata=2024a=h04d1e81_0
   - utf8proc=2.6.1=h5eee18b_1
@@ -175,8 +190,10 @@ dependencies:
   - zlib=1.2.13=h5eee18b_0
   - zstd=1.5.5=hc292b87_0
   - pip:
-      - cachetools==4.2.1
-      - drain3==0.9.11
-      - jsonpickle==1.5.1
-      - polars==0.20.20
-      - tipping==0.1.3
+    - cachetools==4.2.1
+    - drain3==0.9.11
+    - jsonpickle==1.5.1
+    - polars==0.20.20
+    - pynndescent==0.5.12
+    - tipping==0.1.3
+    - umap-learn==0.5.6
