--- a/environment_win64_no_dl.yml
+++ b/environment_win64_no_dl.yml
@@ -8,6 +8,7 @@ dependencies:
   - abseil-cpp=20211102.0=hd77b12b_0
   - arrow-cpp=14.0.2=ha81ea56_1
   - asttokens=2.0.5=pyhd8ed1ab_0
+  - attrs=23.1.0=py311haa95532_0
   - aws-c-auth=0.6.19=h2bbff1b_0
   - aws-c-cal=0.5.20=h2bbff1b_0
   - aws-c-common=0.8.5=h2bbff1b_0
@@ -30,6 +31,7 @@ dependencies:
   - bzip2=1.0.8=he774522_0
   - c-ares=1.19.1=h2bbff1b_0
   - ca-certificates=2024.3.11=haa95532_0
+  - cloudpickle=2.2.1=py311haa95532_0
   - colorama=0.4.6=py311haa95532_0
   - comm=0.2.1=pyhd8ed1ab_0
   - contourpy=1.2.0=py311h59b6b97_0
@@ -57,6 +59,8 @@ dependencies:
   - jedi=0.18.1=py311haa95532_1
   - joblib=1.2.0=py311haa95532_0
   - jpeg=9e=h2bbff1b_1
+  - jsonschema=4.19.2=py311haa95532_0
+  - jsonschema-specifications=2023.7.1=py311haa95532_0
   - jupyter_client=8.6.0=py311haa95532_0
   - jupyter_core=5.5.0=py311haa95532_0
   - kiwisolver=1.4.4=py311hd77b12b_0
@@ -89,6 +93,7 @@ dependencies:
   - libxcb=1.15=hcd874cb_0
   - libxgboost=1.7.3=hd77b12b_0
   - libxml2=2.10.4=h0ad7f3c_1
+  - llvmlite=0.42.0=py311hf2fb9eb_0
   - lz4-c=1.9.4=h2bbff1b_0
   - m2w64-gcc-libgfortran=5.3.0=6
   - m2w64-gcc-libs=5.3.0=7
@@ -104,7 +109,9 @@ dependencies:
   - mkl_random=1.2.4=py311h59b6b97_0
   - msys2-conda-epoch=20160418=1
   - munkres=1.1.4=py_0
+  - nbformat=5.9.2=py311haa95532_0
   - nest-asyncio=1.6.0=pyhd8ed1ab_0
+  - numba=0.59.1=py311hf62ec03_0
   - numexpr=2.8.7=py311h1fcbade_0
   - numpy=1.26.0=py311hdab7c0b_0
   - numpy-base=1.26.0=py311hd01c5d8_0
@@ -120,6 +127,7 @@ dependencies:
   - pillow=10.2.0=py311h2bbff1b_0
   - pip=23.3.1=pyhd8ed1ab_0
   - platformdirs=3.10.0=py311haa95532_0
+  - plotly=5.19.0=py311h746a85d_0
   - ply=3.11=py311haa95532_0
   - prompt-toolkit=3.0.43=py311haa95532_0
   - psutil=5.9.0=py311h2bbff1b_0
@@ -134,25 +142,32 @@ dependencies:
   - pyqt5-sip=12.13.0=py311h2bbff1b_0
   - python=3.11.5=he1021f5_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-fastjsonschema=2.16.2=py311haa95532_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - pytz=2023.3.post1=py311haa95532_0
   - pywin32=305=py311h2bbff1b_0
   - pyzmq=25.1.2=py311hd77b12b_0
   - qt-main=5.15.2=h19c9488_10
   - re2=2022.04.01=hd77b12b_0
+  - referencing=0.30.2=py311haa95532_0
   - regex=2023.10.3=py311h2bbff1b_0
+  - rpds-py=0.10.6=py311h062c2fa_0
   - scikit-learn=1.2.2=py311hd77b12b_1
   - scipy=1.12.0=py311h9f229c6_0
   - setuptools=68.2.2=pyhd8ed1ab_0
+  - shap=0.42.1=py311hf62ec03_0
   - sip=6.7.12=py311hd77b12b_0
   - six=1.16.0=pyhd3eb1b0_1
+  - slicer=0.0.7=pyhd3eb1b0_0
   - snappy=1.1.10=h6c2663c_1
   - sqlite=3.41.2=h2bbff1b_0
   - stack_data=0.2.0=pyhd3eb1b0_0
   - tbb=2021.8.0=h59b6b97_0
+  - tenacity=8.2.2=py311haa95532_0
   - threadpoolctl=2.2.0=pyh0d69192_0
   - tk=8.6.12=h2bbff1b_0
   - tornado=6.3.3=py311h2bbff1b_0
+  - tqdm=4.65.0=py311h746a85d_0
   - traitlets=5.7.1=py311haa95532_0
   - typing_extensions=4.11.0=pyha770c72_0
   - tzdata=2024a=h0c530f3_0
@@ -174,5 +189,8 @@ dependencies:
       - importlib-metadata==6.8.0
       - jsonpickle==1.5.1
       - polars==0.20.20
+      - pynndescent==0.5.12
       - tipping==0.1.3
+      - umap==0.1.1
+      - umap-learn==0.5.6
       - zipp==3.17.0
