Environment updates for dotenv and latex table printing

--- a/environment_no_dl.yml
+++ b/environment_no_dl.yml
@@ -31,6 +31,7 @@ dependencies:
   - bzip2=1.0.8=h5eee18b_5
   - c-ares=1.19.1=h5eee18b_0
   - ca-certificates=2024.3.11=h06a4308_0
+  - click=8.1.7=py311h06a4308_0
   - cloudpickle=2.2.1=py311h06a4308_0
   - comm=0.2.1=py311h06a4308_0
   - contourpy=1.2.0=py311hdb19cb5_0
@@ -57,6 +58,7 @@ dependencies:
   - ipykernel=6.28.0=py311h06a4308_0
   - ipython=8.20.0=py311h06a4308_0
   - jedi=0.18.1=py311h06a4308_1
+  - jinja2=3.1.3=py311h06a4308_0
   - joblib=1.2.0=py311h06a4308_0
   - jpeg=9e=h5eee18b_1
   - jsonschema=4.19.2=py311h06a4308_0
@@ -106,6 +108,7 @@ dependencies:
   - libxml2=2.10.4=hf1b16e4_1
   - llvmlite=0.42.0=py311h6a678d5_0
   - lz4-c=1.9.4=h6a678d5_0
+  - markupsafe=2.1.3=py311h5eee18b_0
   - matplotlib=3.8.0=py311h06a4308_0
   - matplotlib-base=3.8.0=py311ha02d727_0
   - matplotlib-inline=0.1.6=py311h06a4308_0
@@ -150,6 +153,7 @@ dependencies:
   - pyqt5-sip=12.13.0=py311h5eee18b_0
   - python=3.11.5=h955ad1f_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
+  - python-dotenv=0.21.0=py311h06a4308_0
   - python-fastjsonschema=2.16.2=py311h06a4308_0
   - python-tzdata=2023.3=pyhd3eb1b0_0
   - pytz=2023.3.post1=py311h06a4308_0
