--- a/demo/parser_benchmark/speed_config.yml
+++ b/demo/parser_benchmark/speed_config.yml
@@ -55,38 +55,38 @@ proportions:
  - 1/1024
  - 1/512
  - 1/256
- - 1/128
- - 1/64
- - 1/32
- - 1/16
- - 1/8
- - 1/4
- - 1/2
- - 1/1
+#  - 1/128
+#  - 1/64
+#  - 1/32
+#  - 1/16
+#  - 1/8
+#  - 1/4
+#  - 1/2
+#  - 1/1
 
 parsers:
-  # - name: Tip
-  #   call: parse_tip
-  #   field: e_event_tip_id
-  # - name: Pliplom
-  #   call: parse_pliplom
-  #   field: e_event_pliplom_id
-  # - name: AEL
-  #   call: parse_ael
-  #   field: e_event_ael_id
-  # - name: Iplom
-  #   call: parse_iplom
-  #   field: e_event_iplom_id
-  # - name: Drain
-  #   call: parse_drain
-  #   field: e_event_drain_id
-  # - name: Brain
-  #   call: parse_brain
-  #   field: e_event_brain_id  
-  - name: Spell
-    call: parse_spell
-    field: e_event_spell_id
-  - name: Lenma
-    call: parse_lenma
-    field: e_event_lenma_id
+  - name: Tip
+    call: parse_tip
+    field: e_event_tip_id
+  - name: Pliplom
+    call: parse_pliplom
+    field: e_event_pliplom_id
+  - name: AEL
+    call: parse_ael
+    field: e_event_ael_id
+  - name: Iplom
+    call: parse_iplom
+    field: e_event_iplom_id
+  - name: Drain
+    call: parse_drain
+    field: e_event_drain_id
+  - name: Brain
+    call: parse_brain
+    field: e_event_brain_id  
+  # - name: Spell
+  #   call: parse_spell
+  #   field: e_event_spell_id
+  # - name: Lenma
+  #   call: parse_lenma
+  #   field: e_event_lenma_id
 
