add: demos and test assume loglead is installed as package and env file is used for data

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,2 @@
-#Specify path to loglead and to full log data
-LOGLEAD_PATH = "/home/<username>/LogLead"
+#Specify path to full log data
 LOG_DATA_PATH = "/home/<username>/Datasets"
