--- a/environment_no_dl.yml
+++ b/environment_no_dl.yml
@@ -2,202 +2,202 @@ name: ll_no_tf
 channels:
   - defaults
 dependencies:
-  - _libgcc_mutex=0.1=main
-  - _openmp_mutex=5.1=1_gnu
-  - _py-xgboost-mutex=2.0=cpu_0
-  - abseil-cpp=20211102.0=hd4dd3e8_0
-  - arrow-cpp=14.0.2=h374c478_1
-  - asttokens=2.0.5=pyhd3eb1b0_0
-  - attrs=23.1.0=py311h06a4308_0
-  - aws-c-auth=0.6.19=h5eee18b_0
-  - aws-c-cal=0.5.20=hdbd6064_0
-  - aws-c-common=0.8.5=h5eee18b_0
-  - aws-c-compression=0.2.16=h5eee18b_0
-  - aws-c-event-stream=0.2.15=h6a678d5_0
-  - aws-c-http=0.6.25=h5eee18b_0
-  - aws-c-io=0.13.10=h5eee18b_0
-  - aws-c-mqtt=0.7.13=h5eee18b_0
-  - aws-c-s3=0.1.51=hdbd6064_0
-  - aws-c-sdkutils=0.1.6=h5eee18b_0
-  - aws-checksums=0.1.13=h5eee18b_0
-  - aws-crt-cpp=0.18.16=h6a678d5_0
-  - aws-sdk-cpp=1.10.55=h721c034_0
-  - backcall=0.2.0=pyhd3eb1b0_0
-  - blas=1.0=mkl
-  - boost-cpp=1.82.0=hdb19cb5_2
-  - bottleneck=1.3.7=py311hf4808d0_0
-  - brotli=1.0.9=h5eee18b_7
-  - brotli-bin=1.0.9=h5eee18b_7
-  - bzip2=1.0.8=h5eee18b_5
-  - c-ares=1.19.1=h5eee18b_0
-  - ca-certificates=2024.3.11=h06a4308_0
-  - click=8.1.7=py311h06a4308_0
-  - cloudpickle=2.2.1=py311h06a4308_0
-  - comm=0.2.1=py311h06a4308_0
-  - contourpy=1.2.0=py311hdb19cb5_0
-  - cycler=0.11.0=pyhd3eb1b0_0
-  - cyrus-sasl=2.1.28=h52b45da_1
-  - dbus=1.13.18=hb2f20db_0
-  - debugpy=1.6.7=py311h6a678d5_0
-  - decorator=5.1.1=pyhd3eb1b0_0
-  - executing=0.8.3=pyhd3eb1b0_0
-  - expat=2.5.0=h6a678d5_0
-  - fontconfig=2.14.1=h4c34cd2_2
-  - fonttools=4.25.0=pyhd3eb1b0_0
-  - freetype=2.12.1=h4a9f257_0
-  - gflags=2.2.2=h6a678d5_1
-  - giflib=5.2.1=h5eee18b_3
-  - glib=2.78.4=h6a678d5_0
-  - glib-tools=2.78.4=h6a678d5_0
-  - glog=0.5.0=h6a678d5_1
-  - grpc-cpp=1.48.2=he1ff14a_1
-  - gst-plugins-base=1.14.1=h6a678d5_1
-  - gstreamer=1.14.1=h5eee18b_1
-  - icu=73.1=h6a678d5_0
-  - intel-openmp=2023.1.0=hdb19cb5_46306
-  - ipykernel=6.28.0=py311h06a4308_0
-  - ipython=8.20.0=py311h06a4308_0
-  - jedi=0.18.1=py311h06a4308_1
-  - jinja2=3.1.3=py311h06a4308_0
-  - joblib=1.2.0=py311h06a4308_0
-  - jpeg=9e=h5eee18b_1
-  - jsonschema=4.19.2=py311h06a4308_0
-  - jsonschema-specifications=2023.7.1=py311h06a4308_0
-  - jupyter_client=8.6.0=py311h06a4308_0
-  - jupyter_core=5.5.0=py311h06a4308_0
-  - kiwisolver=1.4.4=py311h6a678d5_0
-  - krb5=1.20.1=h143b758_1
-  - lcms2=2.12=h3be6417_0
-  - ld_impl_linux-64=2.38=h1181459_1
-  - lerc=3.0=h295c915_0
-  - libboost=1.82.0=h109eef0_2
-  - libbrotlicommon=1.0.9=h5eee18b_7
-  - libbrotlidec=1.0.9=h5eee18b_7
-  - libbrotlienc=1.0.9=h5eee18b_7
-  - libclang=14.0.6=default_hc6dbbc7_1
-  - libclang13=14.0.6=default_he11475f_1
-  - libcups=2.4.2=h2d74bed_1
-  - libcurl=8.5.0=h251f7ec_0
-  - libdeflate=1.17=h5eee18b_1
-  - libedit=3.1.20230828=h5eee18b_0
-  - libev=4.33=h7f8727e_1
-  - libevent=2.1.12=hdbd6064_1
-  - libffi=3.4.4=h6a678d5_0
-  - libgcc-ng=11.2.0=h1234567_1
-  - libgfortran-ng=11.2.0=h00389a5_1
-  - libgfortran5=11.2.0=h1234567_1
-  - libglib=2.78.4=hdc74915_0
-  - libgomp=11.2.0=h1234567_1
-  - libiconv=1.16=h7f8727e_2
-  - libllvm14=14.0.6=hdb19cb5_3
-  - libnghttp2=1.57.0=h2d74bed_0
-  - libpng=1.6.39=h5eee18b_0
-  - libpq=12.17=hdbd6064_0
-  - libprotobuf=3.20.3=he621ea3_0
-  - libsodium=1.0.18=h7b6447c_0
-  - libssh2=1.10.0=hdbd6064_2
-  - libstdcxx-ng=11.2.0=h1234567_1
-  - libthrift=0.15.0=h1795dd8_2
-  - libtiff=4.5.1=h6a678d5_0
-  - libuuid=1.41.5=h5eee18b_0
-  - libwebp=1.3.2=h11a3e52_0
-  - libwebp-base=1.3.2=h5eee18b_0
-  - libxcb=1.15=h7f8727e_0
-  - libxgboost=1.7.6=h6a678d5_0
-  - libxkbcommon=1.0.1=h5eee18b_1
-  - libxml2=2.10.4=hf1b16e4_1
-  - llvmlite=0.42.0=py311h6a678d5_0
-  - lz4-c=1.9.4=h6a678d5_0
-  - markupsafe=2.1.3=py311h5eee18b_0
-  - matplotlib=3.8.0=py311h06a4308_0
-  - matplotlib-base=3.8.0=py311ha02d727_0
-  - matplotlib-inline=0.1.6=py311h06a4308_0
-  - mkl=2023.1.0=h213fc3f_46344
-  - mkl-service=2.4.0=py311h5eee18b_1
-  - mkl_fft=1.3.8=py311h5eee18b_0
-  - mkl_random=1.2.4=py311hdb19cb5_0
-  - munkres=1.1.4=py_0
-  - mysql=5.7.24=h721c034_2
-  - nbformat=5.9.2=py311h06a4308_0
-  - ncurses=6.4=h6a678d5_0
-  - nest-asyncio=1.6.0=py311h06a4308_0
-  - numba=0.59.1=py311ha02d727_0
-  - numexpr=2.8.7=py311h65dcdc2_0
-  - numpy=1.26.4=py311h08b1b3b_0
-  - numpy-base=1.26.4=py311hf175353_0
-  - openjpeg=2.4.0=h3ad879b_0
-  - openssl=3.0.13=h7f8727e_0
-  - orc=1.7.4=hb3bc3d3_1
-  - packaging=23.2=py311h06a4308_0
-  - pandas=2.2.1=py311ha02d727_0
-  - parso=0.8.3=pyhd3eb1b0_0
-  - pcre=8.45=h295c915_0
-  - pcre2=10.42=hebb0a14_0
-  - pexpect=4.8.0=pyhd3eb1b0_3
-  - pickleshare=0.7.5=pyhd3eb1b0_1003
-  - pillow=10.2.0=py311h5eee18b_0
-  - pip=23.3.1=py311h06a4308_0
-  - platformdirs=3.10.0=py311h06a4308_0
-  - plotly=5.19.0=py311h92b7b1e_0
-  - ply=3.11=py311h06a4308_0
-  - prompt-toolkit=3.0.43=py311h06a4308_0
-  - prompt_toolkit=3.0.43=hd3eb1b0_0
-  - psutil=5.9.0=py311h5eee18b_0
-  - ptyprocess=0.7.0=pyhd3eb1b0_2
-  - pure_eval=0.2.2=pyhd3eb1b0_0
-  - py-xgboost=1.7.6=py311h06a4308_0
-  - pyarrow=14.0.2=py311hb6e97c4_0
-  - pygments=2.15.1=py311h06a4308_1
-  - pyparsing=3.0.9=py311h06a4308_0
-  - pyqt=5.15.10=py311h6a678d5_0
-  - pyqt5-sip=12.13.0=py311h5eee18b_0
-  - python=3.11.5=h955ad1f_0
-  - python-dateutil=2.8.2=pyhd3eb1b0_0
-  - python-dotenv=0.21.0=py311h06a4308_0
-  - python-fastjsonschema=2.16.2=py311h06a4308_0
-  - python-tzdata=2023.3=pyhd3eb1b0_0
-  - pytz=2023.3.post1=py311h06a4308_0
-  - pyyaml=6.0.1=py311h5eee18b_0
-  - pyzmq=25.1.2=py311h6a678d5_0
-  - qt-main=5.15.2=h53bd1ea_10
-  - re2=2022.04.01=h295c915_0
-  - readline=8.2=h5eee18b_0
-  - referencing=0.30.2=py311h06a4308_0
-  - regex=2023.10.3=py311h5eee18b_0
-  - rpds-py=0.10.6=py311hb02cf49_0
-  - s2n=1.3.27=hdbd6064_0
-  - scikit-learn=1.2.2=py311h6a678d5_1
-  - scipy=1.12.0=py311h08b1b3b_0
-  - setuptools=68.2.2=py311h06a4308_0
-  - shap=0.42.1=py311ha02d727_0
-  - sip=6.7.12=py311h6a678d5_0
-  - six=1.16.0=pyhd3eb1b0_1
-  - slicer=0.0.7=pyhd3eb1b0_0
-  - snappy=1.1.10=h6a678d5_1
-  - sqlite=3.41.2=h5eee18b_0
-  - stack_data=0.2.0=pyhd3eb1b0_0
-  - tbb=2021.8.0=hdb19cb5_0
-  - tenacity=8.2.2=py311h06a4308_0
-  - threadpoolctl=2.2.0=pyh0d69192_0
-  - tk=8.6.12=h1ccaba5_0
-  - tornado=6.3.3=py311h5eee18b_0
-  - tqdm=4.65.0=py311h92b7b1e_0
-  - traitlets=5.7.1=py311h06a4308_0
-  - tzdata=2024a=h04d1e81_0
-  - utf8proc=2.6.1=h5eee18b_1
-  - wcwidth=0.2.5=pyhd3eb1b0_0
-  - wheel=0.41.2=py311h06a4308_0
-  - xgboost=1.7.6=py311h06a4308_0
-  - xz=5.4.6=h5eee18b_0
-  - yaml=0.2.5=h7b6447c_0
-  - zeromq=4.3.5=h6a678d5_0
-  - zlib=1.2.13=h5eee18b_0
-  - zstd=1.5.5=hc292b87_0
+  - _libgcc_mutex>=0.1
+  - _openmp_mutex>=5.1
+  - _py-xgboost-mutex>=2.0
+  - abseil-cpp>=20211102.0
+  - arrow-cpp>=14.0.2
+  - asttokens>=2.0.5
+  - attrs>=23.1.0
+  - aws-c-auth>=0.6.19
+  - aws-c-cal>=0.5.20
+  - aws-c-common>=0.8.5
+  - aws-c-compression>=0.2.16
+  - aws-c-event-stream>=0.2.15
+  - aws-c-http>=0.6.25
+  - aws-c-io>=0.13.10
+  - aws-c-mqtt>=0.7.13
+  - aws-c-s3>=0.1.51
+  - aws-c-sdkutils>=0.1.6
+  - aws-checksums>=0.1.13
+  - aws-crt-cpp>=0.18.16
+  - aws-sdk-cpp>=1.10.55
+  - backcall>=0.2.0
+  - blas>=1.0
+  - boost-cpp>=1.82.0
+  - bottleneck>=1.3.7
+  - brotli>=1.0.9
+  - brotli-bin>=1.0.9
+  - bzip2>=1.0.8
+  - c-ares>=1.19.1
+  - ca-certificates>=2024.3.11
+  - click>=8.1.7
+  - cloudpickle>=2.2.1
+  - comm>=0.2.1
+  - contourpy>=1.2.0
+  - cycler>=0.11.0
+  - cyrus-sasl>=2.1.28
+  - dbus>=1.13.18
+  - debugpy>=1.6.7
+  - decorator>=5.1.1
+  - executing>=0.8.3
+  - expat>=2.5.0
+  - fontconfig>=2.14.1
+  - fonttools>=4.25.0
+  - freetype>=2.12.1
+  - gflags>=2.2.2
+  - giflib>=5.2.1
+  - glib>=2.78.4
+  - glib-tools>=2.78.4
+  - glog>=0.5.0
+  - grpc-cpp>=1.48.2
+  - gst-plugins-base>=1.14.1
+  - gstreamer>=1.14.1
+  - icu>=73.1
+  - intel-openmp>=2023.1.0
+  - ipykernel>=6.28.0
+  - ipython>=8.20.0
+  - jedi>=0.18.1
+  - jinja2>=3.1.3
+  - joblib>=1.2.0
+  - jpeg>=9e
+  - jsonschema>=4.19.2
+  - jsonschema-specifications>=2023.7.1
+  - jupyter_client>=8.6.0
+  - jupyter_core>=5.5.0
+  - kiwisolver>=1.4.4
+  - krb5>=1.20.1
+  - lcms2>=2.12
+  - ld_impl_linux-64>=2.38
+  - lerc>=3.0
+  - libboost>=1.82.0
+  - libbrotlicommon>=1.0.9
+  - libbrotlidec>=1.0.9
+  - libbrotlienc>=1.0.9
+  - libclang>=14.0.6
+  - libclang13>=14.0.6
+  - libcups>=2.4.2
+  - libcurl>=8.5.0
+  - libdeflate>=1.17
+  - libedit>=3.1.20230828
+  - libev>=4.33
+  - libevent>=2.1.12
+  - libffi>=3.4.4
+  - libgcc-ng>=11.2.0
+  - libgfortran-ng>=11.2.0
+  - libgfortran5>=11.2.0
+  - libglib>=2.78.4
+  - libgomp>=11.2.0
+  - libiconv>=1.16
+  - libllvm14>=14.0.6
+  - libnghttp2>=1.57.0
+  - libpng>=1.6.39
+  - libpq>=12.17
+  - libprotobuf>=3.20.3
+  - libsodium>=1.0.18
+  - libssh2>=1.10.0
+  - libstdcxx-ng>=11.2.0
+  - libthrift>=0.15.0
+  - libtiff>=4.5.1
+  - libuuid>=1.41.5
+  - libwebp>=1.3.2
+  - libwebp-base>=1.3.2
+  - libxcb>=1.15
+  - libxgboost>=1.7.6
+  - libxkbcommon>=1.0.1
+  - libxml2>=2.10.4
+  - llvmlite>=0.42.0
+  - lz4-c>=1.9.4
+  - markupsafe>=2.1.3
+  - matplotlib>=3.8.0
+  - matplotlib-base>=3.8.0
+  - matplotlib-inline>=0.1.6
+  - mkl>=2023.1.0
+  - mkl-service>=2.4.0
+  - mkl_fft>=1.3.8
+  - mkl_random>=1.2.4
+  - munkres>=1.1.4
+  - mysql>=5.7.24
+  - nbformat>=5.9.2
+  - ncurses>=6.4
+  - nest-asyncio>=1.6.0
+  - numba>=0.59.1
+  - numexpr>=2.8.7
+  - numpy>=1.26.4
+  - numpy-base>=1.26.4
+  - openjpeg>=2.4.0
+  - openssl>=3.0.13
+  - orc>=1.7.4
+  - packaging>=23.2
+  - pandas>=2.2.1
+  - parso>=0.8.3
+  - pcre>=8.45
+  - pcre2>=10.42
+  - pexpect>=4.8.0
+  - pickleshare>=0.7.5
+  - pillow>=10.2.0
+  - pip>=23.3.1
+  - platformdirs>=3.10.0
+  - plotly>=5.19.0
+  - ply>=3.11
+  - prompt-toolkit>=3.0.43
+  - prompt_toolkit>=3.0.43
+  - psutil>=5.9.0
+  - ptyprocess>=0.7.0
+  - pure_eval>=0.2.2
+  - py-xgboost>=1.7.6
+  - pyarrow>=14.0.2
+  - pygments>=2.15.1
+  - pyparsing>=3.0.9
+  - pyqt>=5.15.10
+  - pyqt5-sip>=12.13.0
+  - python>=3.11.5
+  - python-dateutil>=2.8.2
+  - python-dotenv>=0.21.0
+  - python-fastjsonschema>=2.16.2
+  - python-tzdata>=2023.3
+  - pytz>=2023.3.post1
+  - pyyaml>=6.0.1
+  - pyzmq>=25.1.2
+  - qt-main>=5.15.2
+  - re2>=2022.04.01
+  - readline>=8.2
+  - referencing>=0.30.2
+  - regex>=2023.10.3
+  - rpds-py>=0.10.6
+  - s2n>=1.3.27
+  - scikit-learn>=1.2.2
+  - scipy>=1.12.0
+  - setuptools>=68.2.2
+  - shap>=0.42.1
+  - sip>=6.7.12
+  - six>=1.16.0
+  - slicer>=0.0.7
+  - snappy>=1.1.10
+  - sqlite>=3.41.2
+  - stack_data>=0.2.0
+  - tbb>=2021.8.0
+  - tenacity>=8.2.2
+  - threadpoolctl>=2.2.0
+  - tk>=8.6.12
+  - tornado>=6.3.3
+  - tqdm>=4.65.0
+  - traitlets>=5.7.1
+  - tzdata>=2024a
+  - utf8proc>=2.6.1
+  - wcwidth>=0.2.5
+  - wheel>=0.41.2
+  - xgboost>=1.7.6
+  - xz>=5.4.6
+  - yaml>=0.2.5
+  - zeromq>=4.3.5
+  - zlib>=1.2.13
+  - zstd>=1.5.5
   - pip:
-    - cachetools==4.2.1
-    - drain3==0.9.11
-    - jsonpickle==1.5.1
-    - polars==0.20.20
-    - pynndescent==0.5.12
-    - tipping==0.1.3
-    - umap-learn==0.5.6
+    - cachetools>=4.2.1
+    - drain3>=0.9.11
+    - jsonpickle>=1.5.1
+    - polars==0.20.21
+    - pynndescent>=0.5.12
+    - tipping>=0.1.3
+    - umap-learn>=0.5.6
