update: supported Python versions bump project version

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "LogLead"
-version = "1.1.0"
+version = "1.1.1"
 authors = [
     {name = "Mika Mäntylä", email="mika.mantyla@helsinki.fi"},
     {name = "Jesse Nyyssölä", email = "jesse.nyyssola@helsinki.fi"},
@@ -27,11 +27,14 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
+    "Programming Language :: Python :: 3.12",
     "Topic :: Scientific/Engineering :: Mathematics",
     "Topic :: Software Development :: Libraries :: Python Modules",
     "Topic :: System :: Logging"]
 
-requires-python = ">=3.9"
+requires-python = ">=3.9,<3.13"
 dependencies = [
 "polars[numpy, pandas, pyarrow]>=1.5",
 "scipy>=1.10.1",
