--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,7 +36,7 @@ classifiers = [
 
 requires-python = ">=3.9,<3.13"
 dependencies = [
-"polars[numpy, pandas, pyarrow]>=1.5",
+"polars[numpy,pandas,pyarrow]>=1.5.0,<1.39.0",
 "scipy>=1.10.1",
 'regex>=2023.10.3',
 'drain3>=0.9.11',
